--- a/imaging/01/Dockerfile
+++ b/imaging/01/Dockerfile
@@ -2,4 +2,5 @@
 FROM      dokken/centos-8
 RUN       yum install epel-release -y
 RUN       yum install nginx -y
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
 
